--- a/test/cage.html
+++ b/test/cage.html
@@ -15,6 +15,43 @@
 <body style="font-family:courier; color:white; background-color: black">
 
   <script type="text/javascript">
+    // first pass, might not yet support adding/removing items
+    // entity-list cycles through its children by only making one visible at a time
+    // pass children in as VISIBLE, component will handle making them invisible by default
+    AFRAME.registerComponent('entity-list', {
+      init: function () {
+        console.log(this.el.children);
+        this.index = 0;// start at zero
+        this.allow_wrap = true;// we'd need to style the "next" button as disabled if we're at end
+
+        for (let i = 1; i < this.el.children.length; i++) {
+          // invisibilize everything after the first index
+          console.log(this.el.children[i].object3D)
+          this.el.children[i].object3D.visible = false;
+          // todo: also .pause() them? they'll need to be unpaused, traversal logic needs extending
+        }
+
+        document.querySelector('#next').addEventListener('click', () => this.next())
+
+      },
+      next: function () {
+        console.log('next!')
+        // todo: test on lists of zero and one elements
+
+        this.el.children[this.index].object3D.visible = false;
+
+        this.index++;
+        if (this.index === this.el.children.length) this.index = 0;
+
+        this.el.children[this.index].object3D.visible = true;
+
+        // if (this.index < this.el.children.length - 1) {
+        //   this.el.children[this.index].object3D.visible = false;
+        //   this.index++;
+        //   this.el.children[this.index].object3D.visible = true;          
+        // }
+      }
+    })
     AFRAME.registerComponent('click-me', {
       init: function () {
         // hover logic might not be stable, I'm somehow afraid of s
@@ -46,6 +83,17 @@
     </a-assets>
 
     <a-entity joses-default-interface></a-entity>
+
+    <a-entity entity-list>
+      <a-box position="0.2 1 -3" color="blue" opacity="0.2"></a-box>
+      <a-box position="-0.2 1 -3" color="green" opacity="0.2"></a-box>
+    </a-entity>
+
+    <a-box id="next" class="clickable" position="1.5 1 -4" color="green" opacity="0.2">
+      <a-text value="NEXT" align="center" side="double"></a-text>
+    </a-box>
+
+
 
     <!-- <a-cylinder id='green-cyl' class="clickable" position="6.5 .75 -8" radius="0.5" color="green" opacity="0.3"></a-cylinder> -->
 
