add 2nd board, dirty patch for start direction bug

--- a/test/cage.html
+++ b/test/cage.html
@@ -160,14 +160,12 @@
 
   <a-scene loading-screen="dotsColor: white; backgroundColor: black">
 
-    <a-assets>
-      <img id="lamb" src="../../lamb.png">
-    </a-assets>
-
     <a-entity joses-default-interface="mode: wasd"></a-entity>
 
 
     <a-plane voxel-board class="clickable" color="gray" position="0 0 -4" height="8" width="8"></a-plane>
+
+    <a-plane voxel-board class="clickable" color="gray" position="0 0 4" rotation="0 180 0" height="8" width="8"></a-plane>
     <!-- <a-plane voxel-board class="clickable" color="white" position="0 0 -4" rotation="-90 0 0" height="8" width="8"></a-plane> -->
 
     <!-- <a-box id="next" class="clickable" position="1.5 1 -4" color="green" opacity="0.2">
