add cage to main index

--- a/test/cage.html
+++ b/test/cage.html
@@ -165,6 +165,8 @@
 
     <a-plane voxel-board class="clickable" color="gray" position="0 0 -4" height="8" width="8"></a-plane>
 
+    <!-- phone browser was starting looking backwards (rotated 180 dex on y-axis) -->
+    <!-- was easier to just include another board than to find out why (for now) -->
     <a-plane voxel-board class="clickable" color="gray" position="0 0 4" rotation="0 180 0" height="8" width="8"></a-plane>
     <!-- <a-plane voxel-board class="clickable" color="white" position="0 0 -4" rotation="-90 0 0" height="8" width="8"></a-plane> -->
 
