--- a/index.html
+++ b/index.html
@@ -147,7 +147,9 @@
             <h1>A place for stuff</h1>
             <br>
             <p><a href="test/cage.html">[ cage.html ]</a></p>
-            <p><a href="test/cube-clicker.html">[ cube-clicker.html ]</a></p>
+            <br>
+            <p><a href="test/draw-app.html">[ draw-app.html ]</a>: draw stuff</p>
+            <p><a href="test/cube-clicker.html">[ cube-clicker.html ]</a>: click stuff</p>
             <br>
             <p>The Basics:</p>
             <br>
